# Cgraphics

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: demo_main.c
examples/professional_app/: app_types.h  main.c  theme_setup.c  theme_setup.h  ui_layout.c  ui_layout.h
include/cgfx/: cgfx_api.h
src/animation/: anim_paint_modifier.hpp  animation_clock.cpp  animation_clock.hpp  easing.cpp  easing.hpp  widget_animation_system.cpp  widget_animation_system.hpp
src/api/: cgfx_api.cpp
src/core/: context.cpp  context.hpp  input_propagation.cpp  input_propagation.hpp  widget_tree.cpp  widget_tree.hpp  window_impl.cpp  window_impl.hpp
src/core/events/: event_dispatch.cpp  event_dispatch.hpp  event_queue.cpp  event_queue.hpp  event_routing_diagnostics.cpp  event_routing_diagnostics.hpp  internal_event.cpp  internal_event.hpp
src/layout/: flex_layout.cpp  flex_layout.hpp
src/platform/: platform_linux_x11.cpp  platform_win32.cpp
src/render/: gl_surface.cpp  gl_surface.hpp  render_command_list.cpp  render_command_list.hpp  render_device.hpp  render_gl_device.cpp
src/style/: style_resolution.hpp  ui_theme.cpp  ui_theme.hpp  widget_style_overrides.cpp  widget_style_overrides.hpp
src/text/: builtin_font_data.cpp  builtin_font_data.hpp  font_registry.cpp  font_registry.hpp  text_glyph_raster_placeholder.hpp  text_glyph_submit.cpp  text_glyph_submit.hpp  text_layout_stub.cpp  text_layout_stub.hpp  text_truetype_face.cpp  text_truetype_face.hpp  text_utf8.hpp
src/widgets/: basic_widgets.cpp  basic_widgets.hpp
tests/: animation_phase8_test.cpp  basic_widgets_test.cpp  event_queue_test.cpp  event_trace_toggle_api_test.c  input_route_receivers_test.cpp  minimal_shutdown.c  phase6_style_test.cpp  professional_app_api_smoke.c  text_measurement_test.c  translate_paint_hit_test.cpp  widget_input_routing_test.cpp  widget_layout_test.cpp  widget_text_integration_test.cpp
